--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" onclick="jump()">
 <head>
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <meta charset="utf-8">
-  <title>A Basic HTML5 Template</title>
+  <title>Мини-игра на JS</title>
   <link rel="stylesheet" href="style.css">
 
 </head>
